--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/(jokes)/page.jsx", "src/components/ui/card.jsx", "src/components/ui/button.jsx", "src/app/layout.jsx", "src/app/api/jokes/route.js", "src/app/(jokes)/components/content.jsx", "src/app/(jokes)/components/filter-tabs.jsx", "src/app/(jokes)/components/joke-form.jsx", "src/app/(jokes)/components/joke.jsx", "src/app/(jokes)/components/toolbar.jsx", "src/app/(jokes)/profile/[username]/page.jsx", "src/app/api/joke/route.js", "src/app/api/joke/[id]/routejs", "src/app/api/jokes/[username]/route.js"],
   "exclude": ["node_modules"]
 }
