--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.2.0",
-    "prisma": "^6.7.0"
+    "tailwind-merge": "^3.2.0"
 
   },
   "devDependencies": {
@@ -36,6 +35,7 @@
     "eslint-config-next": "15.3.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.2.9",
-    "typescript": "^5"
+    "typescript": "^5",
+    "prisma": "^6.7.0"
   }
 }
