--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^3.2.0"
-
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -32,10 +32,9 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "prisma": "^6.7.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.2.9",
-    "typescript": "^5",
-    "prisma": "^6.7.0"
-
+    "typescript": "^5"
   }
 }
